--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .column-container {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   padding: 20px;
 }
 
@@ -15,6 +15,12 @@
 }
 
 .column-title {
+  min-height: 40px;
+  cursor: pointer;
+}
+
+.card-title {
+  margin-right: 50px;
   min-height: 40px;
   cursor: pointer;
 }
@@ -54,21 +60,121 @@
   left: 0;
   right: 0;
   background-color: rgba(0,0,0, 0.5);
+  overflow-y: auto;
 }
 
 .modal-block {
   position: absolute;
-  top: 100px;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   background-color: #fff;
   padding: 10px;
   min-width: 600px;
   border-radius: 5px;
 }
 
-textarea {
-	resize: none;
-	width: 400px;
-	height: 150px;
+.btn.btn-link {
+  padding: 4px 0;
+  background-image: none;
+  background-color: transparent;
+  color: #5e6c84;
+  border: none;
+  text-decoration: underline;
+  text-shadow: none;
+  background-repeat: no-repeat;
+  box-shadow: none;
+  outline: none;
+}
+
+.btn.btn-link:hover {
+  color: #2b487a;
+}
+
+.close-btn {
+  position: absolute;
+  right: 0;
+}
+
+.card-detailed {
+  position: relative;
+}
+
+.card-detailed h3 {
+  display: inline-block;
+  margin: 0;
+  min-height: 18px;
+  min-width: 40px;
+  width: auto;
+}
+
+.card-title h3 {
+  display: block;
+}
+
+.card-description {
+  display: flex;
+  align-items: center;
+}
+
+.description, .comments {
+  margin: 10px 0;
+}
+
+.description-text {
+  background-color: #091e420a;
+  border: none;
+  border-radius: 3px;
+  box-shadow: none;
+  display: block;
+  min-height: 40px;
+  padding: 8px 12px;
+  text-decoration: none;
+  margin-top: 5px;
+  margin-bottom: 0;
+}
+
+.btn-description {
+  margin-left: 30px;
+}
+
+.card-textarea {
+  resize: none;
+  width: 400px;
+  min-height: 100px;
+}
+
+.card-comment {
+  display: flex;
+  margin-top: 20px;
+}
+
+.avatar {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin-right: 15px;
+  background-color: #2f96b4;
+  color: #FFF;
+}
+
+.buttons > .btn {
+  margin-right: 15px;
+}
+
+.buttons > .btn:last-child {
+  margin-right: 0;
+}
+
+.card-detailed .title {
+  text-decoration: underline;
+}
+
+.input-text {
+  line-height: 27px;
+  font-size: 18px;
+  font-weight: bold;
 }
